<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/selectDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_date"
        android:gravity="center"
        android:background="@drawable/btn_bg"
        android:textColor="@color/white"
        android:padding="5dp"
        android:textSize="20sp"
        android:layout_marginTop="100dp"
        android:layout_marginStart="60dp"
        app:drawableStartCompat="@drawable/ic_baseline_calendar" />

    <TextView
        android:id="@+id/selectedDateText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="110dp"
        android:layout_toEndOf="@id/selectDate"
        android:text="@string/_00_00_0000"
        android:textColor="@color/colorPrimary"
        android:textSize="23sp"
        android:textStyle="bold" />
    <TextView
        android:id="@+id/ageInMinutesText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/age_in_minutes"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:textColor="@color/colorPrimary"
        android:textSize="18sp"
        android:layout_below="@id/selectedDateText" />

    <TextView
        android:id="@+id/ageInMinutes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/ageInMinutesText"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/_00000000"
        android:textColor="@color/colorPrimary"
        android:textSize="25sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/ageInHoursText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/ageInMinutes"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:text="@string/age_in_hours"
        android:textColor="@color/colorPrimary"
        android:textSize="18sp" />
    <TextView
        android:id="@+id/ageInHours"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_00000"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:textColor="@color/colorPrimary"
        android:textSize="25sp"
        android:layout_below="@id/ageInHoursText"
        android:textStyle="bold"/>
    <TextView
        android:id="@+id/ageInSecondsText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/age_in_seocnds"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:textColor="@color/colorPrimary"
        android:textSize="18sp"
        android:layout_below="@id/ageInHours" />
    <TextView
        android:id="@+id/ageInSeconds"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_00000000"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:textColor="@color/colorPrimary"
        android:textSize="25sp"
        android:layout_below="@id/ageInSecondsText"
        android:textStyle="bold"/>
    <TextView
        android:id="@+id/ageInDaysText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/age_in_days"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:textColor="@color/colorPrimary"
        android:textSize="18sp"
        android:layout_below="@id/ageInSeconds" />
    <TextView
        android:id="@+id/ageInDays"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_0000"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:textColor="@color/colorPrimary"
        android:textSize="25sp"
        android:layout_below="@id/ageInDaysText"
        android:textStyle="bold"/>

</RelativeLayout>